--- a/media/media_queries_home.css
+++ b/media/media_queries_home.css
@@ -1,10 +1,31 @@
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1024px) {
 	
 	* {
 		text-align: center;
 	}
 
-	.burger-menu {
+	.footer_logo {
+		width: 15%;
+	}
+
+	.footer_society_wrapper {
+		width: 60%;
+  }
+
+	h1 {
+		font-size: 30px;
+		margin-bottom: 20px;
+	}
+
+	h2 {
+		font-size: 14px;
+	}
+
+	.portfolio_wrapper {
+		width: 90%;
+	}
+
+	.burger-menu_contant {
 		display: block;
 		position: absolute;
 		z-index: 10;
@@ -12,11 +33,11 @@
 
 	.burger-menu__button {
 		position: fixed;
-		top: 27px;
-		right: 27px;
+		top: 15px;
+		right: 40px;
 		z-index: 30;
-		width: 80px;
-		height: 80px;
+		width: 50px;
+		height: 50px;
 		border-radius: 50%;
 		background-color: #2a2a2acf;
 		transition: 0.4s;
@@ -26,9 +47,10 @@
 	.burger-menu__lines::after,
 	.burger-menu__lines::before {
 		position: absolute;
-		width: 40px;
-		height: 6px;
+		width: 30px;
+		height: 4px;
 		background-color: #fff;
+		text-align: initial;
 	}
 
 	.burger-menu__lines {
@@ -39,12 +61,12 @@
 
 	.burger-menu__lines::before {
 		content: '';
-		top: -12px;
+		top: -10px;
 	}
 
 	.burger-menu__lines::after {
 		content: '';
-		top: 12px;
+		top: 10px;
 	}
 
 	.burger-menu_active .burger-menu__button,
@@ -77,6 +99,7 @@
 
 	.burger-menu_active .burger-menu__nav {
 		left: 0;
+		top: 0;
 	}
 
 	.burger-menu__link {
@@ -113,4 +136,92 @@
 	.header_list {
 		display: none;
 	}
+
+	.header_lian_agency_wrapper {
+		margin: 100px auto 50px;
+  }
+
+  .point_slider {
+		transform: scale(.8);
+	}
+
+	.portfolio_nav ul {
+		width: 90%;
+  }
+
+  .slash {
+		height: 15px;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.header_logo img {
+		width: 70%;
+	}
+
+	.header_menu {
+		width: 90%;
+		margin: 20px auto;
+  }
+
+  .burger-menu__button {
+		width: 40px;
+		height: 40px;
+	}
+
+	.burger-menu__lines::before {
+		content: '';
+		top: -7px;
+	}
+
+	.burger-menu__lines::after {
+		content: '';
+		top: 7px;
+	}
+
+	.burger-menu__lines,
+	.burger-menu__lines::after,
+	.burger-menu__lines::before {
+		width: 25px;
+		height: 3px;
+	}
+
+	h1 {
+		font-size: 20px;
+	}
+
+	.header_lian_agency_wrapper {
+		width: 70%;
+  }
+
+  h2 {
+		font-size: 12px;
+  }
+
+  .point_slider {
+		transform: scale(.6);
+	}
+
+	button {
+		font-size: 10px;
+  }
+
+  footer h2 {
+		font-size: 10px;
+	}
+}
+
+@media screen and (max-width: 479px) {
+	.portfolio_nav ul {
+		display: block;
+	}
+
+	.list_tag {
+		padding: 0 10px;
+		margin-top: 10px;
+	}
+
+	.footer_logo {
+		width: 25%;
+  }
 }
