--- a/style/home.css
+++ b/style/home.css
@@ -7,8 +7,8 @@
 }
 
 body {
- 
-   margin: 0 auto;
+   max-width: 1600px;
+   margin: auto;
    font-family: Roboto;
 }
 
@@ -73,7 +73,7 @@ a:hover, i:hover {
    transition: 1s;
 }
 
-.burger-menu {
+.burger-menu_contant {
 	display: none;
 }
 
@@ -191,10 +191,6 @@ p {
    align-items: center;
 }
 
-.portfolio_nav ul li {
-   margin-right: 20px;
-}
-
 .slash {
    height: 25px;
    width: 1px;
@@ -207,13 +203,17 @@ p {
    justify-content: space-between;
 }
 
+.portfolio_images_wrapper {
+   width: 32%;
+}
+
 .portfolio_images_wrapper img {
    display: block;
 }
 
 .portfolio_img_with_overlay {
    position: relative;
-   margin-bottom: 30px;
+   margin-bottom: 10%;
 }
 
 .portf_overlay {
