--- a/style/single_post.css
+++ b/style/single_post.css
@@ -74,6 +74,7 @@ blockquote {
 .single_post_form_wrapper {
    width: 85%;
    margin: 35px auto;
+   text-align: center;
 }
 
 .single_post_form input, textarea {
@@ -108,7 +109,4 @@ blockquote {
    padding: 15px 40px;
    background-color: black;
    border-radius: 2px;
-   position: relative;
-   left: 50%;
-   transform: translate(-50%, 0);
 }
