--- a/style/blog.css
+++ b/style/blog.css
@@ -259,14 +259,15 @@ input[type="image"] {
    padding-bottom: 20px;
    padding-left: 25px;
    padding-right: 22px;
+   padding: 30px 22px 20px 25px;
    display: flex;
    justify-content: space-between;
 }
 
-.insta_img_bloc {
+.insta_img_block {
    width: 32%;
 }
 
-.insta_img_bloc img {
+.insta_img_block img {
    margin-bottom: 5px;
 }
